<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:alpha="0.15"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/poster_as_background" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MovieCatalogue.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Detail"
            app:navigationIconTint="@color/tab_indicator"
            app:menu="@menu/menu_detail"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/poster_on_top" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/tv_meta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        android:gravity="center"
        android:layout_margin="8dp" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rtb_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_meta"
        app:layout_constraintTop_toBottomOf="@id/tv_meta"
        app:layout_constraintEnd_toEndOf="@id/tv_meta"
        android:layout_marginTop="8dp"
        android:isIndicator="true"
        android:progressTint="@color/star"
        android:progressBackgroundTint="@color/star_back"
        android:secondaryProgressTint="@color/white"/>

    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rtb_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/lbl_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_synopsis"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/hsv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/lbl_overview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="#312C2C"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:scrollbars="vertical"
            android:maxLines="5"
            android:padding="5dp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:src="@drawable/ic_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/tab_background"
        android:backgroundTint="@color/tab_indicator"
        android:contentDescription="@string/cd_fab" />

</androidx.constraintlayout.widget.ConstraintLayout>