<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- Splash Screen -->
    <string name="splash_content_description">Movie Catalogue Logo</string>

    <!-- Home Screen -->
    <string name="title_activity_home">Home Page</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Shows</string>

    <!-- Detail Screen -->
    <string name="title_activity_detail">Detail Page</string>
    <string name="item_cd_poster">Item: Poster Image</string>
    <string name="poster_as_background">Poster as Background</string>
    <string name="poster_on_top">Poster on top</string>
    <string name="share">Are you ever watch this movie? The title is %1$s, release at %2$s</string>
    <string name="item_share">Share</string>

    <!-- Favorite -->
    <string name="title_activity_favorite">Favorite</string>
    <string name="lbl_empty_fav">Favorite List is Empty</string>

    <!-- Other -->
    <string name="refresh">Refresh</string>
    <string name="warning_icon">Warning Icon</string>
    <string name="version">Submission 3.0 | Created by Unero</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="cd_fab">Add to Favorite</string>
    <string name="item_favorite">Favorite Item</string>
    <string name="lbl_synopsis">Synopsis</string>
</resources>